# georgstage

./: Makefile  README.md  example.py  pyproject.toml  ramdom.ipynb  requirements.txt  setup.py  test-docx.ipynb  test-xlsx.ipynb  test.xlsx  vagtskema.docx
.github/workflows/: build.yaml  publish.yaml
data/: eksempel.json  synthetic.csv  togt.csv
georgstage/: __init__.py  app.py  controller.py  interface.py  interface2.py  model.py  models.py  planner.py  solver.py  tkinterface.py  tkinterface2.py  view.py
georgstage/plan/: __init__.py  data.py  opt.py
notebooks_and_experiments/: georgstage-basic.ipynb  georgstage-solver-example.ipynb  nytlib.ipynb  prototype.ipynb  requirements.txt  test-docx.ipynb  test-xlsx.ipynb  vagtplan.py  vagtskema-udfyldt.docx
resources/: georgstage.icns
src/: cli.py
src/georgstage/: autofill.py  cli.py  controller.py  interface.py  model.py  view.py
src/georgstage/autofill/: __init__.py  greedy.py  lp.py
test/: test_app.py  test_model.py  test_planner.py
